--- a/mistypes/locale/ru/LC_MESSAGES/django.po
+++ b/mistypes/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-07-26 22:12+0300\n"
+"POT-Creation-Date: 2016-07-27 10:25+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -81,6 +81,10 @@ msgstr "Комментарий пользователя"
 #: models.py:31
 msgid "Date"
 msgstr "Дата"
+
+#: models.py:37
+msgid "Full text"
+msgstr "Полный текст"
 
 #: signals.py:27
 msgid "New mistype"
